[tool.poetry]
name = "eminence-builder"
version = "0.1.0"
description = ""
authors = ["James Leone <1558486+jleonelion@users.noreply.github.com>"]
readme = "README.md"
packages = [{ include = "agents" }]

[tool.poetry.dependencies]
python = "^3.11"
langchain = ">=0.3.0,<0.4.0"
langsmith = "^0.1.139"
langchain-cohere = ">=0.3.0,<0.4.0"
langchain-google-genai = ">=2.0.0,<3.0.0"
langchain-core = ">=0.3.10,<0.4.0"
langchain-community = ">=0.3.0,<0.4.0"
langchain-openai = "0.3.1"
langchain-anthropic = "0.3.3"
langchain-fireworks = ">=0.2.0,<0.3.0"
langchain-groq = ">=0.2.0,<0.3.0"
langgraph = "^0.3.5"
beautifulsoup4 = "^4.12.2"
weaviate-client = "^4.0.0"
voyageai = "^0.1.4"
pillow = "^10.2.0"
psycopg2-binary = "^2.9.9"
langchainhub = "^0.1.21"
tavily-python = ">=0.5.0"
pytz = "^2024.2"
firecrawl-py = "^1.10.1"
pydantic = "^2.10.5"
linkedin-api-client = "^0.3.0"
pymongo = "^4.11"
browser-use = "^0.1.40"
fastapi = "^0.115.8"
apscheduler = "^3.11.0"
arxiv = "^2.1.3"

[tool.poetry.group.dev.dependencies]
pytest = "^8.3.4"
ruff = "^0.5.0"
pandas = "^2.2.2"
langgraph-cli = { version = "*", extras = ["inmem"] }
debugpy = "^1.8.11"
pytest-asyncio = "^0.25.2"
flask = "^3.1.0"
pre-commit = "^4.1.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.ruff]
lint.select = [
    "E",    # pycodestyle
    "F",    # pyflakes
    "I",    # isort
    "D",    # pydocstyle
    "D401", # First line should be in imperative mood
    "T201",
    "UP",
]
lint.ignore = [
    "UP006",
    "UP007",
    # We actually do want to import from typing_extensions
    "UP035",
    # Relax the convention by _not_ requiring documentation for every function parameter.
    "D417",
    "E501",
]
[tool.ruff.lint.per-file-ignores]
"tests/*" = ["D", "UP"]
[tool.ruff.lint.pydocstyle]
convention = "google"
